--- a/src/app/footer/footer/footer.component.html
+++ b/src/app/footer/footer/footer.component.html
@@ -1,6 +1,5 @@
 <div>
-    <p>footer</p>
-    <div id="wcb" class="carbonbadge"></div>
+    <h2>footer</h2>
 </div>
 
-<!-- "https://unpkg.com/website-carbon-badges@1.1.2/b.min.js" -->
+<div id="wcb" class="carbonbadge"></div>
