--- a/src/app/03_signup/form/form.component.html
+++ b/src/app/03_signup/form/form.component.html
@@ -14,6 +14,11 @@
             <label for="email">email</label>
             <input type="email" ngModel id="email" name="email" placeholder="example@email.com"required>
         </div>
+
+        <div>
+            <label for="phone">phone</label>
+            <input type="phone" ngModel id="phone" name="phone" placeholder="phone number" required>
+        </div>
         
         <div>
             <label for="password">password</label>
