--- a/src/app/04_profile/profile-page/profile.page.html
+++ b/src/app/04_profile/profile-page/profile.page.html
@@ -1,2 +1,10 @@
-<p>{{userName}}</p>
-<button type="button" (click)="logout()"><a href="#"><span class="iconify" data-icon="ri:logout-circle-fill"></span> Logout</a></button>
+<h1>{{userName}}</h1>
+
+<app-user-detail></app-user-detail>
+
+<app-custom-size></app-custom-size>
+
+<div>
+    <button type="button" (click)="logout()"><a href="#">Logout</a></button>
+    <button type="button">Help!</button>
+</div>
