--- a/src/app/footer/footer/footer.component.html
+++ b/src/app/footer/footer/footer.component.html
@@ -1,5 +1,7 @@
 <div>
-    <h2>footer</h2>
-</div>
+    <div>
+        <h5><a href="" [routerLink]="['/credits']" routerLinkActive="router-link-active" >credits</a></h5>
+    </div>
 
-<div id="wcb" class="carbonbadge"></div>
+    <div id="wcb" class="carbonbadge"></div>
+</div>
