--- a/src/app/00_header/menu/menu.component.scss
+++ b/src/app/00_header/menu/menu.component.scss
@@ -1,3 +1,24 @@
+@import '/src/scss/variables';
+
+#container {
+    background-color: $sage;
+    height: 100vh;
+    padding: 1.5rem;
+    overflow: hidden !important;
+    &::-webkit-scrollbar {
+        display: none !important; 
+    }
+}
+
+a {
+    text-decoration: none;
+    &:hover {
+        color: $light-almond;
+        text-decoration: underline;
+        font-size: $font-size-s;
+    }
+}
+
 #theme {
     display: flex;
 }
