--- a/src/app/00_header/navbar/navbar.component.scss
+++ b/src/app/00_header/navbar/navbar.component.scss
@@ -1,4 +1,29 @@
-div {
-    background-color: rgb(194, 233, 136);
+@import '/src/scss/variables';
+
+mat-toolbar {
+    background-color: $sage;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#logo {
+    display: flex;
+    align-items: center;
+    img {
+        width: 2rem;
+        height: 2rem;
+    }
+
+    a{
+        color: black;
+        text-decoration: none;
+        &:hover {
+            color:black
+        }
+        h1 {
+            font-size: 2rem;
+            margin-left: 0.2em;
+        }
+    }
 }
