--- a/src/app/00_header/panel/panel.component.html
+++ b/src/app/00_header/panel/panel.component.html
@@ -1,11 +1,11 @@
 <div id="panel">
     <div>
-        <button type="button"><a href="#"><span class="iconify" data-icon="icon-park-solid:shopping-bag-one"></span></a></button>
+        <button class="btn-primary" type="button"><a href="#" [routerLink]="['/login']" routerLinkActive="router-link-active" ><i class="bi bi-box-arrow-in-right"></i></a></button>
     </div>
     <div>
-        <button type="button"><a href="#" [routerLink]="['/login']" routerLinkActive="router-link-active" ><span class="iconify" data-icon="ri:login-circle-fill"></span></a></button>
+        <button type="button"><a href="#" [routerLink]="['/profile']" routerLinkActive="router-link-active" ><i class="bi bi-person-fill"></i></a></button>
     </div>
     <div>
-        <button type="button"><a href="#" [routerLink]="['/profile/:id']" routerLinkActive="router-link-active" ><span class="iconify" data-icon="fa:user"></span></a></button>
+        <button type="button"><a href="#"><i class="bi bi-bag-fill"></i></a></button>
     </div>
 </div>
