--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -7,7 +7,7 @@ $font-size-m: 2rem;
 $font-size-l: 3rem;
 
 /* ----------- colours main ----------- */
-$mint: #cdeecc;
+$mint: #b8d1b7;
 $sage: #86B197;
 $blue-grey: #384b45;
 $brown: #D0802E;
@@ -21,5 +21,5 @@ $grey: #9aa5a3;
 /* ----------- colours dark ----------- */
 $dark-mint: #91BB90;
 $dark-sage: #668C75;
-$dark-brown: #A96A2A;
-$dark-almond: #CA9259;
+$dark-brown: #995f25;
+$dark-almond: #facea2;
