--- a/src/app/00_header/menu/menu.component.html
+++ b/src/app/00_header/menu/menu.component.html
@@ -1,31 +1,20 @@
-<div id="container">
-    <mat-form-field appearance="outline">
-        <mat-label>Search</mat-label>
-        <input matInput placeholder="Placeholder">
-        <i class="bi bi-search"></i>
-    </mat-form-field>
-    
+<div id="container">      
     <mat-nav-list>
-        <button mat-button [matMenuTriggerFor]="shopMenu">Shop</button>
-            <mat-menu #shopMenu="matMenu" yPosition="below">
-                <a mat-menu-item href="#" [routerLink]="['/products', 'type', 'dresses']" routerLinkActive="router-link-active" >dresses</a>
-                <a mat-menu-item href="#" [routerLink]="['/products', 'type', 'bottoms']" routerLinkActive="router-link-active">bottoms</a>
-                <a mat-menu-item href="#" [routerLink]="['/products', 'type', 'tees']" routerLinkActive="router-link-active">tees & tops</a>
-            </mat-menu>
-        
+        <mat-accordion>
+            <mat-expansion-panel hideToggle>
+                <mat-expansion-panel-header>
+                    <mat-panel-title>
+                        <a mat-list-item>Shop</a>
+                    </mat-panel-title>  
+                </mat-expansion-panel-header>
+                    <a class="subMenu" mat-menu-item href="#" [routerLink]="['/products', 'type', 'dresses']" routerLinkActive="router-link-active" >dresses</a>
+                    <a class="subMenu" mat-menu-item href="#" [routerLink]="['/products', 'type', 'bottoms']" routerLinkActive="router-link-active">bottoms</a>
+                    <a class="subMenu" mat-menu-item href="#" [routerLink]="['/products', 'type', 'tees']" routerLinkActive="router-link-active">tees & tops</a>
+            </mat-expansion-panel>
+        </mat-accordion>
+
         <a mat-list-item href="#">Sustainability</a>  
         <a mat-list-item href="#">About</a>   
         <a mat-list-item href="#" [routerLink]="['/home']" routerLinkActive="router-link-active" >Home</a>
     </mat-nav-list>
-
-    <div id="theme">
-        <div id="toggle">
-            <label>
-                <input type="checkbox">
-            </label>
-        </div>
-        <div>
-            <p>save energy</p>
-        </div>
-    </div>
 </div>
