--- a/src/app/00_header/menu/menu.component.scss
+++ b/src/app/00_header/menu/menu.component.scss
@@ -1,15 +1,5 @@
 @import '/src/scss/variables';
 
-#container {
-    background-color: $sage;
-    height: 100vh;
-    padding: 1.5rem;
-    overflow: hidden !important;
-    &::-webkit-scrollbar {
-        display: none !important; 
-    }
-}
-
 a {
     text-decoration: none;
     &:hover {
@@ -19,6 +9,18 @@ a {
     }
 }
 
-#theme {
-    display: flex;
+mat-expansion-panel {
+    background-color: $sage !important;
+    box-shadow: none !important;
+    padding: 0px !important;
+    border-radius: 0%;
+    border-bottom: 2px solid $blue-grey;
+    mat-expansion-panel-header, mat-panel-title {
+        padding: 0px !important;
+        margin: 0px !important;
+    }
+    .subMenu:hover {
+        font-size: $font-size-xs;
+        background-color: $sage !important;
+    }
 }
