--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,7 @@
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
 @import '~bootstrap-icons/font/bootstrap-icons.css';
+
 @import 'scss/variables';
 @import 'scss/buttons';
 
