--- a/src/app/03_signup/signup-page/signup.page.html
+++ b/src/app/03_signup/signup-page/signup.page.html
@@ -1,3 +1,5 @@
-<button type="button"><a href="#" [routerLink]="['/home']" routerLinkActive="router-link-active">&lt;</a></button>
-<h1>Sign Up</h1>
-<app-form></app-form>
+<div class="form-container">
+    <button type="button"><a href="#" [routerLink]="['/home']" routerLinkActive="router-link-active">&lt;</a></button>
+    <h1>Sign Up</h1>
+    <app-form></app-form>
+</div>
