--- a/src/app/footer/footer/footer.component.scss
+++ b/src/app/footer/footer/footer.component.scss
@@ -2,7 +2,7 @@
 
 div {
     width: 100%;
-    position: fixed;
+    position: relative;
     bottom: 0;
     background-color: $blue-grey;
     a {
