--- a/src/app/00_header/navbar/navbar.component.html
+++ b/src/app/00_header/navbar/navbar.component.html
@@ -16,7 +16,7 @@
          
          <div id="logo">
             <img src="./assets/imgs/001-leaves.svg" alt="brand-logo">
-            <a href="#" [routerLink]="['/home']" routerLinkActive="router-link-active" ><h1>Brand</h1></a> 
+            <a href="#" [routerLink]="['/home']"><h1>Brand</h1></a> 
          </div>
          
          <app-panel></app-panel>               
