--- a/src/app/02_login/login-page/login.page.html
+++ b/src/app/02_login/login-page/login.page.html
@@ -1,5 +1,5 @@
 <div class="form-container">
-    <button type="button"><a href="#" [routerLink]="['/home']" routerLinkActive="router-link-active">&lt;</a></button>
+    <button class="icon-btn" type="button"><a href="#" [routerLink]="['/home']" routerLinkActive="router-link-active">&lt;</a></button>
     <h1>Login</h1>
     <app-form></app-form>
 </div>
