--- a/src/app/footer/footer/footer.component.html
+++ b/src/app/footer/footer/footer.component.html
@@ -1,7 +1,44 @@
-<div>
-    <div>
-        <h5><a href="" [routerLink]="['/credits']" routerLinkActive="router-link-active" >credits</a></h5>
+<div id="footer-container">
+    <div id="footer-main">
+        <div id="footer-txt">
+            <div>
+                <p class="title">Shop</p>
+                <p>dresses</p>
+                <p>bottoms</p>
+                <p>tees & tops</p>
+            </div>
+        
+            <div>
+                <p class="title">Help!</p>
+                <p>shipping</p>
+                <p>returns</p>
+                <p>privacy policy</p>
+                <p>contact us</p>
+                <p>FAQ</p>
+            </div>
+        
+            <div>
+                <p class="title">Brand</p>
+                <p>about us</p>
+                <p>sustainability</p>
+                <p>work with us</p>
+            </div>
+        </div>
+        
+        <div id="footer-icons">
+            <div id="badge">
+                <p>CO2 badge</p>
+            </div>
+        
+            <div>
+                <i class="bi bi-facebook"></i>
+                <i class="bi bi-instagram"></i>
+                <i class="bi bi-linkedin"></i>
+            </div>
+        </div>
+    
     </div>
 
-    <div id="wcb" class="carbonbadge"></div>
+    <p>&copy; 2022 - <a href="" [routerLink]="['/credits']" routerLinkActive="router-link-active" >credits</a></p>
+
 </div>
