--- a/src/app/00_header/navbar/navbar.component.scss
+++ b/src/app/00_header/navbar/navbar.component.scss
@@ -1,4 +1,5 @@
 @import '/src/scss/variables';
+@import '/src/scss/mixins';
 
 mat-sidenav-container {
     position: sticky;
@@ -14,7 +15,11 @@ mat-toolbar {
 
 mat-sidenav {
     background-color: $sage !important;
-    width: 35%;
+    width: 100%;
+    @include screen-min($screen-s){
+        width: 55%;}
+    @include screen-min($screen-m){
+        width: 40%;}
     button {
         margin: 1rem;
     }
@@ -27,6 +32,15 @@ mat-sidenav {
     align-items: center;
     width: fit-content;
     margin: 0 auto;
+    @include screen-min($screen-s){
+        left: 40vw;}
+    @include screen-min($screen-m){
+        left: 42vw;}
+    a {
+        display: none;
+        @include screen-min($screen-s){
+            display: inline;}
+    }
     img {
         width: 2rem;
         height: 2rem;
