--- a/src/app/00_header/panel/panel.component.scss
+++ b/src/app/00_header/panel/panel.component.scss
@@ -1,4 +1,5 @@
 @import '/src/scss/variables';
+@import '/src/scss/mixins';
 
 #panel {
     display: flex;
@@ -6,7 +7,10 @@
 }
 
 #login {
-    margin-right: 1rem;
+    display: none;
+    @include screen-min($screen-m){
+        display: inline;
+        margin-right: 0.5rem;}
     button {
         background-color: $light-almond;
         width: 6rem;
