--- a/src/app/02_login/form/form.component.html
+++ b/src/app/02_login/form/form.component.html
@@ -18,16 +18,14 @@
             </mat-form-field>
         </div>
       
-        <div>
+        <div class="btn-container">
             <button class="btn-primary" type="submit">Login</button>
+            <div *ngIf="error" class="error">
+                <p>{{error}}</p>
+            </div>
             <p>or</p>
-            <button class="btn-secondary" type="button"><a href="#" [routerLink]="['/signup']" routerLinkActive="router-link-active" >Sign Up</a></button>
+            <button class="btn-secondary" type="button" [routerLink]="['/signup']">Sign Up</button>
         </div> 
     </form>
-
-    <div *ngIf="error" class="error">
-        <p>{{error}}</p>
-    </div>
-
 </div>
 
