--- a/src/app/footer/footer/footer.component.html
+++ b/src/app/footer/footer/footer.component.html
@@ -3,9 +3,9 @@
         <div id="footer-txt">
             <div>
                 <p class="title">Shop</p>
-                <p>dresses</p>
-                <p>bottoms</p>
-                <p>tees & tops</p>
+                <p><a [routerLink]="['/products', 'type', 'dresses']" >dresses</a></p>
+                <p><a [routerLink]="['/products', 'type', 'bottoms']" >bottoms</a></p>
+                <p><a [routerLink]="['/products', 'type', 'tees']" >tees & tops</a></p>
             </div>
         
             <div>
