--- a/src/app/05_products/product-card/product-card.component.scss
+++ b/src/app/05_products/product-card/product-card.component.scss
@@ -1,4 +1,14 @@
+@import '/src/scss/variables';
+@import '/src/scss/mixins';
+
 .card {
-    border: 1px solid black;
-    margin: 1rem
+    padding: 1.5rem;
+    margin: 2.5rem 0;
+    background-color: $light-almond;
+    img {
+        margin: 1rem auto;
+    }
+    button {
+        width: 100%;
+    }
 }
