--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,7 +27,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
     font-family: $font-serif;
     text-transform: lowercase;
-    margin: 1rem;
+    margin: 0.5rem auto;
     padding: 0;
 }
 
@@ -39,7 +39,7 @@ a {
 }
 
 p {
-    font-size: $font-size-xs;
+    font-size: $font-size-s;
     margin: 1rem;
     padding: 0;
 }
