--- a/src/app/00_header/menu/menu.component.scss
+++ b/src/app/00_header/menu/menu.component.scss
@@ -25,7 +25,7 @@ mat-expansion-panel {
     background-color: $sage !important;
     box-shadow: none !important;
     padding: 0px !important;
-    border-radius: 0%;
+    border-radius: 0% !important;
     border-bottom: 2px solid $blue-grey;
     mat-expansion-panel-header, mat-panel-title {
         padding: 0px !important;
