--- a/src/app/05_products/products-page/products.page.html
+++ b/src/app/05_products/products-page/products.page.html
@@ -3,6 +3,6 @@
     <p>{{prodList.length}} intems</p>
 </div>
 
-<div>
+<div class="items">
     <app-product-card [prodList]="prodList"></app-product-card>
 </div>
