--- a/src/app/06_product-detail/product-detail-card/product-detail-card.component.html
+++ b/src/app/06_product-detail/product-detail-card/product-detail-card.component.html
@@ -1,6 +1,6 @@
 <div class="card-detail">
     <h1>{{product.productName}}</h1>
-    <p>{{product.price}} €</p>
+    <p class="price">{{product.price}} €</p>
     <p>{{product.colours}}</p>
 
     <div class="sizes">
@@ -16,7 +16,5 @@
         <label for="sizeXL">XL</label><br>
     </div>
 
-    <p>Your recommended size is -SIZE-</p>
-
-    <button type="button">Add to cart</button>
+    <button class="btn-primary" type="button">Add to cart</button>
 </div>
