--- a/src/app/00_header/navbar/navbar.component.html
+++ b/src/app/00_header/navbar/navbar.component.html
@@ -6,7 +6,7 @@
         
         <button class="nav-btn" type="button" aria-label="Toggle sidenav" mat-icon-button (click)="sidenav.close()"><i class="bi bi-x-circle"></i></button>
         
-        <app-menu></app-menu>
+        <app-menu (click)="sidenav.close()"></app-menu>
    </mat-sidenav>
 
    <mat-sidenav-content>
