--- a/src/app/05_products/products-page/products.page.scss
+++ b/src/app/05_products/products-page/products.page.scss
@@ -1,3 +1,14 @@
+@import '/src/scss/variables';
+@import '/src/scss/mixins';
+
 div {
     text-align: center;
+}
+
+app-product-card {
+    @include screen-min($screen-m){
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        column-gap: 2rem;
+    }
 }
