--- a/src/app/06_product-detail/product-description/product-description.component.html
+++ b/src/app/06_product-detail/product-description/product-description.component.html
@@ -1,4 +1,9 @@
-<dl>
-    <dt>Description</dt>
-    <dd>{{product.description}}</dd>
-</dl>
+<mat-accordion>
+    <mat-expansion-panel (opened)="panelOpenState = true"
+                       (closed)="panelOpenState = false">
+        <mat-expansion-panel-header>
+            <mat-panel-title>Description</mat-panel-title>
+        </mat-expansion-panel-header>
+        <p>{{product.description}}</p>
+    </mat-expansion-panel>
+</mat-accordion>
