--- a/src/app/06_product-detail/product-detail-card/product-detail-card.component.scss
+++ b/src/app/06_product-detail/product-detail-card/product-detail-card.component.scss
@@ -1,3 +1,24 @@
+@import '/src/scss/variables';
+@import '/src/scss/mixins';
+
+.card-detail {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .price {
+        font-weight: bold;
+        color: $blue-grey;
+        font-size: $font-size-m;
+    }
+}
+
+button {
+    width: 100%;
+    margin: 2rem auto !important;
+    @include screen-min($screen-m){
+        width: fit-content;}
+}
+
 .sizes {
     display: flex;
 }
