--- a/src/app/footer/footer/footer.component.html
+++ b/src/app/footer/footer/footer.component.html
@@ -31,9 +31,9 @@
             </div>
         
             <div>
-                <i class="bi bi-facebook"></i>
-                <i class="bi bi-instagram"></i>
-                <i class="bi bi-linkedin"></i>
+                <p><i class="bi bi-facebook"></i></p>
+                <p><i class="bi bi-instagram"></i></p>
+                <p><i class="bi bi-linkedin"></i></p>
             </div>
         </div>
     
